[+]. 寻找两个有序数组的中位数.md

--- a/tencent/两数之和.md
+++ b/tencent/两数之和.md
@@ -9,12 +9,12 @@
  > 所以返回 [0, 1]
 
 # 代码
-利用三列表结构，时间复杂度为O(n)。
+利用散列表结构，时间复杂度为O(n)。
 ``` js
 const twoSum = (nums, target) => {
   const hash = {}
   for (let i = 0, len = nums.length; i < len; i++) {
-    if (hash[target - nums[i]] !== undefined) {
+    if (hash[target - nums[i]] >= 0) {
       return [i, hash[target - nums[i]]]
     }
     hash[nums[i]] = i
